@@ -281,3 +281,8 @@
 </div>
 
 <div id='elementToViewportDimensions' style='display: none'></div>
+
+<div id='clone_position_source_absolute'></div>
+<div id='clone_position_target_absolute'></div>
+<div id='clone_position_target_relative'></div>
+<div id='clone_position_source_relative'></div>
