@@ -1,3 +1,5 @@
+* Fix Element#clonePosition issues with element margins, borders, and padding. Closes #11613. [azazel, jddalton, Nick Stakenburg]
+
 * Minor clean-up to Element#cumulativeOffset and Element#positionedOffset. [jddalton]
 
 * Fix Element#cumulativeScrollOffset for Opera 9.25/9.5. Closes #10486. [jddalton, Nick Stakenburg]
